test-data/error/no-buttons.hltas
version 1
frames
----------|------|------|0.001|-|-|1
buttons 1
